# bopymo

./: .gitignore  LICENSE  README.md  bopimo_types.py  bopymo.py  pyproject.toml  template.py
docs/: starter_guide.md
legacy/: README.md  bopymo.py  godot_types.py
reference/: 01-programmer_one.bop  01-programmer_one.py  02-new_kinematics.py  03-bopymo_decals.bop  03-bopymo_decals.py  04-starter_guide.py  bopymo_decals.py  new_kinematics.bop  new_kinematics.py  programmer_one.py  starter_guide.bop  starter_guide.py
src/bopymo/: bopimo_types.py  classes.py  enumerators.py  logger.py
